--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </div>
 
         <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
-        
+        <button onclick = "facebookSignin()">Facebook Signin</button>
+<button onclick = "facebookSignout()">Facebook Signout</button>
     </nav>
 
     <!-- login modal -->
