--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <link rel="stylesheet" href="./styles/keen-slider-styles.css">
 </head>
 <body>
-
-    <!-- pre loader -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=1266293694141358&autoLogAppEvents=1" nonce="i0SmCpjY"></script>
    
 
     <!-- navbar -->
@@ -62,6 +62,7 @@
                         <i class="fa-solid fa-user-plus me-1 fa-lg"></i> Sign Up
                     </a>
                 </li>
+                <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div>
             </ul>
         </div>
     </nav>
