--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                         <i class="fa-solid fa-user-plus me-1 fa-lg"></i> Sign Up
                     </a>
                 </li>
+
+                <button class="btn btn-success btn-lg">Continue with Google</button>
                 <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div>
             </ul>
         </div>
