--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     </div>
                     <div id="login-invalid-auth"></div>
                     <input type="submit" value="Login" class="btn btn-success btn-lg">
-                    <button class="btn btn-success btn-lg">Continue with Google</button>
+                    <!-- Create a google sign in button -->
+                    <!-- <button onclick="" class="btn btn-success btn-lg">Continue with Google</button> -->
                 </form>
                 <div class="wrapper">
                     <div class="divider div-transparent div-dot"></div>
