--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
     <link rel="stylesheet" href="./styles/keen-slider-styles.css">
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=1266293694141358&autoLogAppEvents=1" nonce="i0SmCpjY"></script>
-   
+
+    <!-- pre loader -->
+    <div class="loading d-flex flex-column justify-content-center align-items-center" id="loader">
+        <h3 class="display-4">Loading the page...</h3>
+        <div class="spinner">
+            <div class="rect1 me-3"></div>
+            <div class="rect2 me-3"></div>
+            <div class="rect3 me-3"></div>
+            <div class="rect4 me-3"></div>
+            <div class="rect5 me-3"></div>
+        </div>
+    </div>
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
@@ -62,9 +71,6 @@
                         <i class="fa-solid fa-user-plus me-1 fa-lg"></i> Sign Up
                     </a>
                 </li>
-
-                
-                <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div>
             </ul>
         </div>
     </nav>
@@ -91,8 +97,6 @@
                     </div>
                     <div id="login-invalid-auth"></div>
                     <input type="submit" value="Login" class="btn btn-success btn-lg">
-                    <!-- Create a google sign in button -->
-                    <!-- <button onclick="" class="btn btn-success btn-lg">Continue with Google</button> -->
                 </form>
                 <div class="wrapper">
                     <div class="divider div-transparent div-dot"></div>
@@ -311,7 +315,7 @@
     </footer>
 
     <!-- Goto top button -->
-    <button id="gotoTopBtn" 
+    <button id="gotoTopBtn" class="rounded-circle" title="Goto top">
         <i class="fa-solid fa-circle-arrow-up fs-1"></i>
     </button>
 
