--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 </li>
             </ul>
         </div>
+        <button id="signInWithFacebook">sign face</button>
     </nav>
 
     <!-- login modal -->
