--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="./styles/keen-slider-styles.css">
 </head>
 <body>
-
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=859995984979960&autoLogAppEvents=1" nonce="9oZLL3aK"></script>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
         <!-- brand-logo -->
@@ -61,8 +62,10 @@
                 </li>
             </ul>
         </div>
-        <button id="signInWithFacebook">sign face</button>
-    </nav>
+        <!-- <button id="signInWithFacebook">sign face</button>
+         -->
+         <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div>
+        </nav>
 
     <!-- login modal -->
     <div class="modal fade" id="loginModal" aria-hidden="true" aria-labelledby="loginModalLabel" tabindex="-1">
@@ -315,9 +318,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Custom scripts -->
-    <script src="/__/firebase/6.2.4/firebase-app.js"></script>
-    <script src="/__/firebase/6.2.4/firebase-auth.js"></script>
-    <script defer>
+    <!-- <script src="/__/firebase/6.2.4/firebase-app.js"></script>
+    <script src="/__/firebase/6.2.4/firebase-auth.js"></script> -->
+    <!-- <script defer>
         const auth = firebase.auth();
 const signInWithFacebookButton = document.getElementById('signInWithFacebook');
 
@@ -334,8 +337,53 @@ const signInWithFacebook = () => {
   }
 
 signInWithFacebookButton.addEventListener('click', signInWithFacebook);
-</script>
+</script> -->
 
+
+<!-- <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '859995984979960',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v14.0'
+    });
+      
+    FB.AppEvents.logPageView();   
+      
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+
+
+FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+});
+
+{
+    status: 'connected',
+    authResponse:{
+        accessToken: '...',
+        expiresIn:'...',
+        signedRequest:'...',
+        userID:'...'
+    }
+}
+
+
+function checkLoginState() {
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+}
+</script>
+    </script> -->
     <script type="module" src="./src/index.js"></script>
 
 </body>
