--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ function checkLoginState() {
           if (response.status === 'connected') {   // Logged into your webpage and Facebook.
             testAPI();  
           } else {                                 // Not logged into your webpage or we are unable to tell.
-            document.getElementById('status').innerHTML = 'Please log ' +
-              'into this webpage.';
+            // document.getElementById('status').innerHTML = 'Please log ' +
+            //   'into this webpage.';
           }
         }
       
@@ -424,8 +424,8 @@ function checkLoginState() {
           console.log('Welcome!  Fetching your information.... ');
           FB.api('/me', function(response) {
             console.log('Successful login for: ' + response.name);
-            document.getElementById('status').innerHTML =
-              'Thanks for logging in, ' + response.name + '!';
+            // document.getElementById('status').innerHTML =
+            //   'Thanks for logging in, ' + response.name + '!';
           });
         }
       
