--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <link rel="stylesheet" href="./styles/keen-slider-styles.css">
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=859995984979960&autoLogAppEvents=1" nonce="9oZLL3aK"></script>
+    <!-- <div id="fb-root"></div> -->
+    <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=859995984979960&autoLogAppEvents=1" nonce="9oZLL3aK"></script> -->
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
         <!-- brand-logo -->
@@ -62,9 +62,9 @@
                 </li>
             </ul>
         </div>
-        <!-- <button id="signInWithFacebook">sign face</button>
-         -->
-         <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div>
+        <button id="signInWithFacebook">sign face</button>
+         
+         <!-- <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div> -->
         </nav>
 
     <!-- login modal -->
