--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </li>
             </ul>
         </div>
-        <button id="signInWithFacebook">sign face</button>
+        <button id="signIn" onclick="signIn">sign face</button>
          
          <!-- <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="false"></div> -->
         </nav>
@@ -384,8 +384,29 @@ function checkLoginState() {
 }
 </script>
     </script> -->
+<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-auth.js"></script>
+    <script>
+        var firebaseConfig = {
+  apiKey: "AIzaSyD_7v1k8A14uhhfMN1h1_jwS0q7kGA_y6o",
 
-    
+  authDomain: "todotest-f00fb.firebaseapp.com",
+
+  projectId: "todotest-f00fb",
+
+  storageBucket: "todotest-f00fb.appspot.com",
+
+  messagingSenderId: "219580056634",
+
+  appId: "1:219580056634:web:9e17c8611722dc05c0e103",
+
+  measurementId: "G-TLL2Y2M9QP"
+};
+firebase.initializeApp(firebaseConfig);
+firebase.analytics();
+    </script>
+    <script src="./src/firebase.js"></script>
     <script type="module" src="./src/index.js"></script>
 
 </body>
