--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- Fontawesome Kit ==> CHANGE it before pushing to github -->
     <!-- PLACE YOUR FONTAWESOME KIT CODE INSIDE SRC -->
-    <script defer src="....." crossorigin="anonymous"></script>
+    <script  src="....." crossorigin="anonymous"></script>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -384,29 +384,6 @@ function checkLoginState() {
 }
 </script>
     </script> -->
-<script defer src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
-<script defer src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
-<script defer src="https://www.gstatic.com/firebasejs/7.15.1/firebase-auth.js"></script>
-    <script defer>
-        var firebaseConfig = {
-  apiKey: "AIzaSyD_7v1k8A14uhhfMN1h1_jwS0q7kGA_y6o",
-
-  authDomain: "todotest-f00fb.firebaseapp.com",
-
-  projectId: "todotest-f00fb",
-
-  storageBucket: "todotest-f00fb.appspot.com",
-
-  messagingSenderId: "219580056634",
-
-  appId: "1:219580056634:web:9e17c8611722dc05c0e103",
-
-  measurementId: "G-TLL2Y2M9QP"
-};
-firebase.initializeApp(firebaseConfig);
-firebase.analytics();
-    </script>
-    <script  defer src="./src/firebase.js"></script>
     <script type="module" src="./src/index.js"></script>
 
 </body>
